@@ -1,3 +1,5 @@
+package statisticsController;
+
 import javafx.fxml.FXML;
 import javafx.scene.chart.LineChart;
 import javafx.scene.chart.NumberAxis;
@@ -12,7 +14,8 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
 
-public class StatisticController {
+public class MemoryController {
+    private final int UPDATE_PERIOD = 5;
 
     @FXML
     private LineChart<Number, Number> memoryUsageChart;
@@ -20,15 +23,15 @@ public class StatisticController {
     @FXML // Reference the axis from FXML, only if separately defined.
     private NumberAxis xAxis;
 
-    private List<XYChart.Series<Number, Number>> seriesList = new ArrayList<>();
-    private int xSeriesData = 0;
+    private final List<XYChart.Series<Number, Number>> seriesList = new ArrayList<>();
+    private int xSeriesData = -5;
     private final int maxDataPoints = 60;
 
     @FXML
     public void initialize() {
         setupChart();
         ScheduledExecutorService executor = Executors.newSingleThreadScheduledExecutor();
-        executor.scheduleAtFixedRate(this::updateChart, 0, 1, TimeUnit.SECONDS);
+        executor.scheduleAtFixedRate(this::updateChart, 0, UPDATE_PERIOD, TimeUnit.SECONDS);
     }
 
     private void setupChart() {
@@ -40,7 +43,7 @@ public class StatisticController {
         }
 
         List<MemoryPoolMXBean> pools = ManagementFactory.getMemoryPoolMXBeans();
-        for (MemoryPoolMXBean pool : pools) {
+        for (MemoryPoolMXBean pool: pools) {
             if (pool.getType() == java.lang.management.MemoryType.HEAP) {
                 XYChart.Series<Number, Number> newSeries = new XYChart.Series<>();
                 newSeries.setName(pool.getName());
@@ -52,7 +55,8 @@ public class StatisticController {
 
     private void updateChart() {
         List<MemoryPoolMXBean> pools = ManagementFactory.getMemoryPoolMXBeans();
-        for (MemoryPoolMXBean pool : pools) {
+
+        for (MemoryPoolMXBean pool: pools) {
             if (pool.getType() == java.lang.management.MemoryType.HEAP) {
                 MemoryUsage usage = pool.getUsage();
                 double usedMB = usage.getUsed() / 1024.0 / 1024.0;
@@ -60,7 +64,7 @@ public class StatisticController {
                     if (series.getName().equals(pool.getName())) {
                         javafx.application.Platform.runLater(() -> {
                             if (series.getData().size() >= maxDataPoints) {
-                                series.getData().remove(0);
+                                series.getData().removeFirst();
                             }
                             series.getData().add(new XYChart.Data<>(xSeriesData, usedMB));
                         });
@@ -68,12 +72,14 @@ public class StatisticController {
                 });
             }
         }
-        xSeriesData++;
+
+        xSeriesData = xSeriesData + UPDATE_PERIOD;
+
         adjustXAxis();
     }
 
     private void adjustXAxis() {
-        int lowerBound = xSeriesData - maxDataPoints + 1 > 0 ? xSeriesData - maxDataPoints + 1 : 0;
+        int lowerBound = Math.max(xSeriesData - maxDataPoints + 1, 0);
         xAxis.setLowerBound(lowerBound);
         xAxis.setUpperBound(lowerBound + maxDataPoints - 1);
     }
